# mcp-forticnapp-server

./: .dockerignore  .gitignore  README.md  docker-compose.yml  health_check.py  k8s-deployment.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  forticnapp-iac.yml  forticnapp-sca-sast.yml
app/: __init__.py  cnapp_client.py  server.py  tools.py
